@@ -545,17 +545,18 @@ DRIVER(jupk,600)        //               10/15 Jurassic Park (6.00 unofficial MO
 DRIVER(lah,f104)        //Data East MPU: 09/93 Last Action Hero (1.04 French)
 DRIVER(lah,l104)        //               09/93 Last Action Hero (1.04 Spanish)
 DRIVER(lah,c106)        //               09/93 Last Action Hero (1.06 Canadian)
-DRIVER(lah,107)         //               09/93 Last Action Hero (1.07)
+DRIVER(lah,107)         //               09/93 Last Action Hero (1.07, Display 1.04)
+DRIVER(lah,107_105)     //               09/93 Last Action Hero (1.07, Display 1.05)
 DRIVER(lah,l108)        //               09/93 Last Action Hero (1.08 Spanish)
 DRIVER(lah,110)         //               10/93 Last Action Hero (1.10)
 DRIVER(lah,112)         //               11/93 Last Action Hero (1.12)
 DRIVER(lah,113)         //               11/14 Last Action Hero (1.13 unofficial MOD)
-DRIVER(tftc,104)        //Data East MPU: 11/93 Tales From the Crypt (1.04 Spanish)
-DRIVER(tftc,200)        //               11/93 Tales From the Crypt (2.00)
-DRIVER(tftc,300)        //               11/93 Tales From the Crypt (3.00)
-DRIVER(tftc,302)        //               11/93 Tales From the Crypt (3.02 Dutch)
-DRIVER(tftc,303)        //               11/93 Tales From the Crypt (3.03)
-DRIVER(tftc,400)        //               10/15 Tales From the Crypt (4.00 unofficial MOD)
+DRIVER(tftc,104)        //Data East MPU: 11/93 Tales from the Crypt (1.04 Spanish)
+DRIVER(tftc,200)        //               11/93 Tales from the Crypt (2.00)
+DRIVER(tftc,300)        //               11/93 Tales from the Crypt (3.00)
+DRIVER(tftc,302)        //               11/93 Tales from the Crypt (3.02 Dutch)
+DRIVER(tftc,303)        //               11/93 Tales from the Crypt (3.03)
+DRIVER(tftc,400)        //               10/15 Tales from the Crypt (4.00 unofficial MOD)
 DRIVER(tomy,102)        //Data East MPU: 01/94 The Who's Tommy Pinball Wizard (1.02)
 DRIVER(tomy,102be)      //               01/94 The Who's Tommy Pinball Wizard (1.02 Belgian)
 DRIVER(tomy,201d)       //               02/94 The Who's Tommy Pinball Wizard (2.01 Dutch)
