@@ -148,6 +148,7 @@ Hook 4.01 (French), 4.00 (incomplete dumps)
 Hot Wheels (Free Play)
 House of Diamonds (Free Play)
 Jungle Lord (new tricks) L-2beta, L-2 & L-3beta (MOD)
+Last Action Hero 1.07 with Display 1.05
 Lightning (Free Play & MOD rev. 25)
 Locomotion (Free Play)
 Metallica 0.52
